--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,68 @@
 @import "tailwindcss";
+@plugin "daisyui";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+  :root {
+    --font-mono: var(--font-geist-mono);
+  }
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+@media (min-width: 768px) {
+
+}
+@media (max-width: 768px) {
+}
+
+body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  color: rgb(var(--foreground-rgb));
+  /* min-height: 100vh; */
+}
+
+
+:root {
+  
+  /* Light mode colors */
+  --color-primary: #ffffff;
+  --color-secondary: #f3f4f6;
+  --color-accent: #3b82f6;
+  --color-text: #1f2937;
+  --color-text-secondary: #4b5563;
+
+  --color-card-bg: #ffffff;
+  
+
+  --foreground-rgb: 0, 0, 0;
+  --background-start-rgb: 214, 219, 220;
+  --background-end-rgb: 255, 255, 255;
+
+  --background: 0 0% 100%;
+  --foreground: 0 0% 3.9%;
+}
+
+a {
+  /* text-decoration: none; */
+  color: inherit;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+    --foreground-rgb: 255, 255, 255;
+    --background-start-rgb: 0, 0, 0;
+    --background-end-rgb: 0, 0, 0;
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+    /* Dark mode colors */
+    --color-primary: #1f2937;
+    --color-secondary: #13151b;
+    --color-accent: #60a5fa;
+    --color-text: #f9fafb;
+    --color-text-secondary: #d1d5db;
+
+    --color-card-bg: #151515;
+  }
 }
